# codebits

./: .gitignore
bprop/: pyproject.toml  vis.yaml
bprop/bprop_experiments.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bprop/seqgrad/: module.py  opt.py  tools.py
bprop/seqgrad/tests/: non_concrete.py  scatter.py  sphere.py
bprop/tests/: sphere.py
grpc/: go.mod  go.sum
grpc/client/: client.go
grpc/routeguide/: route_guide.pb.go  route_guide.proto  route_guide_grpc.pb.go
grpc/server/: server.go
motion-blur/: .gitignore  CMakeLists.txt  README.md  blur.cu  conanfile.txt  notes.txt
motion-blur/script/: color_grid.py  generate_blog.sh
motion-blur/src/: Makefile  blur.cu  blur.h  dfuncs.cuh  dims.h  funcs.cc  funcs.h  main.cc  tools.h
motion-blur/test/: forward-motion.txt  identity-trajectory.txt  rotation.txt  u-shaped.txt  zig-zag.txt
